# game.libretro.bsnes-hd

./: .travis.yml  CMakeLists.txt  README.md
.github/workflows/: sync-addon-metadata-translations.yml
debian/: changelog.in  control  copyright
depends/common/bsnes-hd/: 0001-Disable-OpenMP.patch  0001-Update-path-to-libretro.cpp.patch  0001-Use-libretro-standard-unix-for-Linux-platform-name.patch  0002-Use-libretro-standard-platform-names.patch  0002-Use-libretro-standard-unix-for-Linux-platform-name.patch  0003-Use-libretro-standard-osx-for-macOS-platform-name.patch  CMakeLists.txt  bsnes-hd.txt
game.libretro.bsnes-hd/: addon.xml.in
game.libretro.bsnes-hd/resources/: settings.xml
game.libretro.bsnes-hd/resources/language/resource.language.af_za/: strings.po
game.libretro.bsnes-hd/resources/language/resource.language.am_et/: strings.po
game.libretro.bsnes-hd/resources/language/resource.language.ar_sa/: strings.po
game.libretro.bsnes-hd/resources/language/resource.language.ast_es/: strings.po
game.libretro.bsnes-hd/resources/language/resource.language.az_az/: strings.po
game.libretro.bsnes-hd/resources/language/resource.language.be_by/: strings.po
game.libretro.bsnes-hd/resources/language/resource.language.bg_bg/: strings.po
game.libretro.bsnes-hd/resources/language/resource.language.bs_ba/: strings.po
game.libretro.bsnes-hd/resources/language/resource.language.ca_es/: strings.po
game.libretro.bsnes-hd/resources/language/resource.language.cs_cz/: strings.po
game.libretro.bsnes-hd/resources/language/resource.language.cy_gb/: strings.po
(+75 files in other folders)
